--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 body {
   background : #ffffff;
   color : #000000;
-  font-family : Helvetica,Lucida,Arial,sans-serif;
+/*  font-family : Helvetica,Lucida,Arial,sans-serif; */
+  font-family : Arial,sans-serif;
   margin : 0pt; 
 }
 
